# python-api

./: Makefile  README.md  navalia.db  pyproject.toml  pyrightconfig.json
src/python_api/: database.py  db_models.py  main.py  models.py
src/python_api/routers/: todos.py
