[project]
name = "python-api"
version = "0.1.0"
description = "Learning project for python api"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.132.0",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"