[project]
name = "python-api"
version = "0.1.0"
description = "Learning project for python api"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.132.0",
    "sqlalchemy>=2.0.47",
    "uvicorn[standard]>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes (imports não usados, etc)
    "I",   # isort (organização de imports)
]

[tool.ruff.lint.isort]
known-first-party = ["python_api"]
